; ModuleID = '/home/carl/AnghaBench/seafile/common/extr_diff-simple.c_diff_files.c'
source_filename = "/home/carl/AnghaBench/seafile/common/extr_diff-simple.c_diff_files.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }
%struct.TYPE_8__ = type { i32 (i32, i8*, %struct.TYPE_7__**, i32)*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.TYPE_7__**, i8*, %struct.TYPE_8__*)* @diff_files to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @diff_files(i32 %0, %struct.TYPE_7__** %1, i8* %2, %struct.TYPE_8__* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_7__**, align 8
  %8 = alloca i8*, align 8
  %9 = alloca %struct.TYPE_8__*, align 8
  %10 = alloca [3 x %struct.TYPE_7__*], align 16
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store %struct.TYPE_7__** %1, %struct.TYPE_7__*** %7, align 8
  store i8* %2, i8** %8, align 8
  store %struct.TYPE_8__* %3, %struct.TYPE_8__** %9, align 8
  store i32 0, i32* %12, align 4
  %13 = getelementptr inbounds [3 x %struct.TYPE_7__*], [3 x %struct.TYPE_7__*]* %10, i64 0, i64 0
  %14 = load i32, i32* %6, align 4
  %15 = sext i32 %14 to i64
  %16 = mul i64 8, %15
  %17 = trunc i64 %16 to i32
  %18 = call i32 @memset(%struct.TYPE_7__** %13, i32 0, i32 %17)
  store i32 0, i32* %11, align 4
  br label %19

19:                                               ; preds = %52, %4
  %20 = load i32, i32* %11, align 4
  %21 = load i32, i32* %6, align 4
  %22 = icmp slt i32 %20, %21
  br i1 %22, label %23, label %55

23:                                               ; preds = %19
  %24 = load %struct.TYPE_7__**, %struct.TYPE_7__*** %7, align 8
  %25 = load i32, i32* %11, align 4
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds %struct.TYPE_7__*, %struct.TYPE_7__** %24, i64 %26
  %28 = load %struct.TYPE_7__*, %struct.TYPE_7__** %27, align 8
  %29 = icmp ne %struct.TYPE_7__* %28, null
  br i1 %29, label %30, label %51

30:                                               ; preds = %23
  %31 = load %struct.TYPE_7__**, %struct.TYPE_7__*** %7, align 8
  %32 = load i32, i32* %11, align 4
  %33 = sext i32 %32 to i64
  %34 = getelementptr inbounds %struct.TYPE_7__*, %struct.TYPE_7__** %31, i64 %33
  %35 = load %struct.TYPE_7__*, %struct.TYPE_7__** %34, align 8
  %36 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = call i64 @S_ISREG(i32 %37)
  %39 = icmp ne i64 %38, 0
  br i1 %39, label %40, label %51

40:                                               ; preds = %30
  %41 = load %struct.TYPE_7__**, %struct.TYPE_7__*** %7, align 8
  %42 = load i32, i32* %11, align 4
  %43 = sext i32 %42 to i64
  %44 = getelementptr inbounds %struct.TYPE_7__*, %struct.TYPE_7__** %41, i64 %43
  %45 = load %struct.TYPE_7__*, %struct.TYPE_7__** %44, align 8
  %46 = load i32, i32* %11, align 4
  %47 = sext i32 %46 to i64
  %48 = getelementptr inbounds [3 x %struct.TYPE_7__*], [3 x %struct.TYPE_7__*]* %10, i64 0, i64 %47
  store %struct.TYPE_7__* %45, %struct.TYPE_7__** %48, align 8
  %49 = load i32, i32* %12, align 4
  %50 = add nsw i32 %49, 1
  store i32 %50, i32* %12, align 4
  br label %51

51:                                               ; preds = %40, %30, %23
  br label %52

52:                                               ; preds = %51
  %53 = load i32, i32* %11, align 4
  %54 = add nsw i32 %53, 1
  store i32 %54, i32* %11, align 4
  br label %19

55:                                               ; preds = %19
  %56 = load i32, i32* %12, align 4
  %57 = icmp eq i32 %56, 0
  br i1 %57, label %58, label %59

58:                                               ; preds = %55
  store i32 0, i32* %5, align 4
  br label %70

59:                                               ; preds = %55
  %60 = load %struct.TYPE_8__*, %struct.TYPE_8__** %9, align 8
  %61 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %60, i32 0, i32 0
  %62 = load i32 (i32, i8*, %struct.TYPE_7__**, i32)*, i32 (i32, i8*, %struct.TYPE_7__**, i32)** %61, align 8
  %63 = load i32, i32* %6, align 4
  %64 = load i8*, i8** %8, align 8
  %65 = getelementptr inbounds [3 x %struct.TYPE_7__*], [3 x %struct.TYPE_7__*]* %10, i64 0, i64 0
  %66 = load %struct.TYPE_8__*, %struct.TYPE_8__** %9, align 8
  %67 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %66, i32 0, i32 1
  %68 = load i32, i32* %67, align 8
  %69 = call i32 %62(i32 %63, i8* %64, %struct.TYPE_7__** %65, i32 %68)
  store i32 %69, i32* %5, align 4
  br label %70

70:                                               ; preds = %59, %58
  %71 = load i32, i32* %5, align 4
  ret i32 %71
}

declare dso_local i32 @memset(%struct.TYPE_7__**, i32, i32) #1

declare dso_local i64 @S_ISREG(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
